# MC-builder-and-windsurf

./: .env  package-lock.json  package.json
backend/: README.md  main.py  market_events.json  models.py  pyproject.toml  routes.py
backend/routes/: funds.py  graph_data.py  market_event.py
frontend/: .env  README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: InvestmentItem.jsx  InvestmentModal.jsx  InvestmentModal.module.css  MarketCard.jsx  MarketCard.module.css  MarketChart.jsx  MarketChart.module.css  MarketEvents.jsx  MarketEvents.module.css  MarketHeader.jsx  PortfolioSection.jsx  PortfolioSection.module.css  SearchModal.jsx  SearchModal.module.css  SegmentedButton.jsx
frontend/src/context/: MarketEventContext.jsx  PortfolioContext.jsx
frontend/src/services/: marketService.js
src/: App.jsx
src/components/: InvestmentItem.jsx  InvestmentItem.module.css  MarketCard.jsx  MarketChart.jsx  MarketChart.module.css  MarketConfidence.jsx  MarketConfidence.module.css  MarketHeader.module.css  PortfolioSection.jsx  SegmentedButton.module.css
