[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=5.0.1",
    "mypy>=1.15.0",
    "openai>=1.76.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "types-flask-cors>=5.0.0.20250413",
    "yfinance>=0.2.57",
]
